# yuwakisarl

./: .gitignore  README.md
collect/: .gitignore  DIMREDAGENT.md  README.md  RL.md  SPEC.md  pyproject.toml
collect/collect.egg-info/: requires.txt
collect/minigam/: MINIGAM.md
collect/pjpd/: collect.txt
collect/src/collect/: __init__.py  ai_controller.py  config.py  game.py  game_state.py  human_controller.py  main.py  neural_agent.py  puffer_agent.py  renderer.py  rolling_reward.py  rolling_score.py  types.py
collect/src/collect.egg-info/: entry_points.txt  requires.txt
collect/tests/: conftest.py  test_ai_controller.py  test_game.py  test_game_state.py  test_neural_agent.py  test_observation.py  test_puffer_agent.py  test_renderer.py  test_rolling_reward.py  test_rolling_score.py
minigam/: GTM.md  MINIGAM.md  ML.md  README.md  SPEC.md  pyproject.toml
minigam/app/: main.py
minigam/resources/public/: board_serializer.js  dice.js  game.js  game_logic.js  game_state.js  index.html  move_formatter.js  style.css
minigam/tests/js/: test_board_serializer.js  test_dice.js  test_game_logic.js  test_game_state.js  test_move_formatter.js
minigam/tests/python/: test_app.py
