[project]
name = "minigam"
version = "0.1.0"
description = "MINIGAM quarter-backgammon prototype served with FastAPI."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
include = ["resources/public/**/*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests/python"]

